--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -5,9 +5,31 @@
         <link rel="stylesheet" href="/css/bootstrap-theme.min.css" type="text/css">
         <link rel="stylesheet" href="/css/styles.css" type="text/css">
         <meta charset="utf-8">
-        <title></title>
+        <title>Best Restaurants in Town</title>
     </head>
     <body>
+        <div class="container">
+            <h1>Great Restaurants</h1>
 
+            <p> Add a Cuisine type:</p>
+
+            <form  action="/cuisines" method="post">
+                <label for="new_cuisine"></label>
+                <input type="text" name="new_cuisine">
+
+                <button type="submit" class="btn btn-primary">Add Cuisine</button>
+            </form>
+
+            {% if cuisines is not empty%}
+                <p>Here are your options:</p>
+                <ul>
+                    {% for cuisine in cuisines %}
+                        <li><a href="cuisines/{{ cuisine.getID }}">{{cuisine.getCuisineType}}</a></li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <p>Nothing to See. Add something!</p>
+            {% endif %}
+        </div>
     </body>
 </html>
