--- a/views/cuisines.html.twig
+++ b/views/cuisines.html.twig
@@ -41,6 +41,9 @@
                 <button type="submit" class="btn btn-primary">Add Restaurant</button>
             </form>
 
+            <p><a href="/cuisine/{{cuisine.getId}}/edit">Edit this Cuisine</a></p>
+
+
             <p><a href="/">Home</a></p>
 
         </div>
